fix bug exception was throw when parse URI which cause GUI is not responding